# Daemon-pmac

./: .copilot-instructions  .coveragerc  .env.example  .env.test  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .yamllint.yaml  API_REQUIREMENTS.md  CHANGES.md  CONTENT_MANAGEMENT.md  COPILOT_INSTRUCTIONS.md  COVERAGE_SETUP.md  DATA_MANAGEMENT.md  DEPENDABOT_MANAGEMENT.md  Dockerfile  E2E_TEST_CASES_GIVEN_WHEN_THEN.md  ENDPOINT_POPULATION_PROMPT.md  FRONTEND_INTEGRATION.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  REMOTE_MANAGEMENT.md  REQUIREMENTS.md  SYSTEM_REQUIREMENTS.md  VSCODE_SETUP.md  blackbeard_data_export.md  branch-protection.json  branch_protection_updated.json  ci_failure_details.txt  ci_failure_logs.txt  ci_final.txt  ci_runs.txt  ci_status.txt  cleanup_blackbeard_data.py  coverage-summary.md  daemon-pmac.code-workspace  daemon-pmac.service  (+50 more)
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  dependencies.yml  format.yml  frontend-e2e.yml  test.yml
app/: __init__.py  auth.py  cli.py  config.py  data_loader.py  database.py  main.py  multi_user_import.py  privacy.py  resume_loader.py  schemas.py  security.py  utils.py
app/routers/: __init__.py  admin.py  api.py  auth.py  mcp.py
data/: README.md
docs/: COPILOT_INSTRUCTIONS.md  DATABASE_MIGRATIONS.md  DATA_MANAGEMENT.md  DOCKER_DEPLOYMENT_EXAMPLES.md  DOCKER_TESTING.md  E2E_TEST_CASES_GIVEN_WHEN_THEN.md  E2E_TEST_IMPROVEMENT_PLAN.md  ENDPOINT_ALIGNMENT.md  FRONTEND_INTEGRATION.md  FRONTEND_PORTFOLIO_SPECIFICATION.md  MARKDOWN_STYLE_GUIDE.md  MCP_SPECIFICATION.md  MULTI_APP_HOSTING.md  PROJECT_STRUCTURE.md  README.md  REMOTE_MANAGEMENT.md  SERVER_SETUP.md  UNIT_TEST_IMPROVEMENT_PLAN.md  VSCODE_SETUP.md  section_implementation_blueprint.md
frontend/: Dockerfile  Dockerfile.dev  README.md  default.conf  index-dashboard.html  index.html  nginx.conf  nginx.prod.conf  nginx.prod.main.conf
frontend/css/: portfolio.css  styles.css
frontend/js/: api.js  app.js  portfolio-multiuser.js  portfolio.js
frontend/tests/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.js  run-tests.sh
scripts/: README.md  check-code-quality.sh  dev-start.sh  migrate_comprehensive.py  migrate_database.py  migrate_endpoint_visibility.py  multi-app-start.sh  prod-start.sh  remote-config.env.template  remote-deploy.sh  remote-setup.sh  setup-ssl.sh  test-docker.sh  version_tracker.py
tests/: __init__.py  conftest.py  test_admin_comprehensive.py  test_admin_e2e.py  test_admin_simplified.py  test_api.py  test_auth.py  test_cli_simple.py  test_data_loader.py  test_data_loader_simple.py  test_mcp.py  test_multi_user_endpoints.py  test_multi_user_import.py  test_resume_loader.py  test_security.py  test_utils.py  test_utils_comprehensive.py
tests/e2e/: test_admin_e2e.py  test_api.py  test_auth.py  test_favorite_books_e2e.py  test_ideas_e2e.py  test_mcp.py  test_multi_user_endpoints_e2e.py  test_privacy_e2e.py  test_problems_e2e.py  test_projects_e2e.py  test_security.py  test_security_validation.py  test_skills_e2e.py  test_skills_matrix_e2e.py  test_url_patterns_e2e.py  test_user_full_name_e2e.py  test_utils.py
tests/unit/: __init__.py  test_admin.py  test_admin_comprehensive.py  test_admin_comprehensive_broken_backup.py  test_admin_consolidated.py  (+31 more)
(+70 files in other folders)
