[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daemon"
version = "0.3.1"
description = "A lightweight, secure personal API framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Phil McNeely"},
]
keywords = ["api", "personal", "daemon", "fastapi", "raspberry-pi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
    "pydantic>=2.5.2",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "slowapi>=0.1.9",
    "cryptography>=41.0.8",
    "bcrypt>=4.1.2",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/philmcneely/daemon-pmac"
Repository = "https://github.com/philmcneely/daemon-pmac.git"
Issues = "https://github.com/philmcneely/daemon-pmac/issues"

[project.scripts]
daemon = "app.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
extend_skip = [".venv", "venv", "env"]
src_paths = ["app", "scripts", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["app"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
plugins = ["sqlalchemy.ext.mypy.plugin"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = [
    "tests/",
    "scripts/",
    "backups/",
    "data/",
    "logs/",
    "venv/",
    ".venv/",
    "app/cli.py",
]

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "jose.*",
    "slowapi.*",
    "prometheus_client.*",
    "psutil.*",
    "uvicorn.*",
    "alembic.*",
    "click.*",
    "rich.*",
    "structlog.*",
    "httpx.*",
    "pytest.*",
    "aiosqlite.*",
    "cryptography.*",
    "bcrypt.*",
]
ignore_missing_imports = true
